# borgmemory

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  NOTICE  README.md  docker-compose.basic.yml  docker-compose.yml  install.sh  pyproject.toml
.githooks/: pre-commit
.github/workflows/: deploy-site.yml
bench/: config.py  evaluator.py  llm.py  report.py  run.sh  runner.py  seed.py  tasks.json
bench/conditions/: borg_compiled.py  no_memory.py  simple_retrieval.py
bench/results/: eval_20260317_142926_task-01_A.json  eval_20260317_142926_task-01_B.json  eval_20260317_142926_task-01_C.json  eval_20260317_142926_task-02_A.json  eval_20260317_142926_task-02_B.json  eval_20260317_142926_task-02_C.json  eval_20260317_150155_task-01_A.json  eval_20260317_150155_task-01_B.json  eval_20260317_150155_task-01_C.json  eval_20260317_150155_task-02_A.json  (+508 more)
bootstrap/: __init__.py  chatgpt.py  claude_ai.py  claude_code.py  codex_cli.py  loader.py  manual.py
cli/: borg_cli.py
cli/templates/: AGENTS.md.j2  (+3 more)
docs/: borg-security-assessment.md  borg-v2-1-current.md  getting-started.md  kiro_security.md  security-implementation-checklist.md  security_best_practices_report.md  user-guide.md
exports/: README.md
migrations/: 001_initial_schema.sql  002_amendments.sql
scripts/: backfill_specific_facts.py  borg-capture.sh  codex-borg-recover.sh  generate_openapi.py  run-quality-gates.sh  seed_borg_namespace.sh
site/: .env.local.example  next.config.mjs  package-lock.json  package.json
tests/: test_api.py  test_auth_basic.py  test_cli.py  test_integration_cli.py  test_security_hardening.py
(+49 files in other folders)
